--- a/CarRentalApp/CarRentalApp/Base.lproj/Main.storyboard
+++ b/CarRentalApp/CarRentalApp/Base.lproj/Main.storyboard
@@ -5,7 +5,6 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
-        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -95,8 +94,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ECd-5G-DKr">
+                                <rect key="frame" x="0.0" y="214" width="393" height="563"/>
+                                <color key="backgroundColor" systemColor="systemGray6Color"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="20" minimumInteritemSpacing="0.0" id="mHD-6I-egT">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="10" minY="0.0" maxX="10" maxY="20"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                            </collectionView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dSE-2L-z2Q">
-                                <rect key="frame" x="40.666666666666657" y="103" width="312" height="62"/>
+                                <rect key="frame" x="40.666666666666657" y="124" width="312" height="62"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Type here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nbS-qo-3kW">
                                         <rect key="frame" x="20" y="1" width="292" height="60"/>
@@ -115,26 +125,6 @@
                                     <constraint firstAttribute="trailing" secondItem="nbS-qo-3kW" secondAttribute="trailing" id="tWF-A2-GVd"/>
                                 </constraints>
                             </view>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ECd-5G-DKr">
-                                <rect key="frame" x="0.0" y="191" width="393" height="582"/>
-                                <color key="backgroundColor" systemColor="systemGray6Color"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="20" minimumInteritemSpacing="0.0" id="mHD-6I-egT">
-                                    <size key="itemSize" width="128" height="128"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="10" minY="0.0" maxX="10" maxY="20"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="vR5-jy-TuP">
-                                        <rect key="frame" x="10" y="0.0" width="128" height="128"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="F3a-CO-fYZ">
-                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </collectionViewCellContentView>
-                                    </collectionViewCell>
-                                </cells>
-                            </collectionView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="r6p-SC-RIm"/>
                         <color key="backgroundColor" systemColor="systemGray6Color"/>
@@ -143,10 +133,10 @@
                             <constraint firstItem="dSE-2L-z2Q" firstAttribute="centerX" secondItem="r6p-SC-RIm" secondAttribute="centerX" id="GFg-LP-joT"/>
                             <constraint firstItem="ECd-5G-DKr" firstAttribute="leading" secondItem="dSE-2L-z2Q" secondAttribute="trailing" constant="-352.33333333333326" id="bWa-SA-k67"/>
                             <constraint firstItem="ECd-5G-DKr" firstAttribute="centerX" secondItem="dSE-2L-z2Q" secondAttribute="centerX" id="eRh-TF-ho6"/>
-                            <constraint firstItem="ECd-5G-DKr" firstAttribute="top" secondItem="dSE-2L-z2Q" secondAttribute="bottom" constant="26" id="fj3-06-iKw"/>
+                            <constraint firstItem="ECd-5G-DKr" firstAttribute="top" secondItem="dSE-2L-z2Q" secondAttribute="bottom" constant="28" id="fj3-06-iKw"/>
                             <constraint firstItem="dSE-2L-z2Q" firstAttribute="height" secondItem="WOM-Oo-nH6" secondAttribute="height" multiplier="0.07277" id="gfe-q2-ffk"/>
-                            <constraint firstItem="ECd-5G-DKr" firstAttribute="height" secondItem="dSE-2L-z2Q" secondAttribute="height" multiplier="9.58065" constant="-12" id="hWw-mM-g1S"/>
-                            <constraint firstItem="dSE-2L-z2Q" firstAttribute="top" secondItem="r6p-SC-RIm" secondAttribute="top" id="lQz-HR-m2Z"/>
+                            <constraint firstItem="ECd-5G-DKr" firstAttribute="height" secondItem="dSE-2L-z2Q" secondAttribute="height" multiplier="9.58065" constant="-31" id="hWw-mM-g1S"/>
+                            <constraint firstItem="dSE-2L-z2Q" firstAttribute="top" secondItem="r6p-SC-RIm" secondAttribute="top" constant="21" id="lQz-HR-m2Z"/>
                             <constraint firstItem="dSE-2L-z2Q" firstAttribute="width" secondItem="WOM-Oo-nH6" secondAttribute="width" multiplier="0.793893" id="tR6-oH-5pI"/>
                         </constraints>
                     </view>
@@ -196,7 +186,7 @@
                                 </connections>
                             </textField>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="kd8-qx-m8Y">
-                                <rect key="frame" x="0.0" y="199" width="393" height="587"/>
+                                <rect key="frame" x="0.0" y="198.66666666666663" width="393" height="587"/>
                                 <color key="backgroundColor" systemColor="systemGray6Color"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="20" minimumInteritemSpacing="0.0" id="jUD-jq-yYs">
                                     <size key="itemSize" width="128" height="128"/>
@@ -204,16 +194,7 @@
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="10" minY="20" maxX="10" maxY="20"/>
                                 </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="aPD-GG-dos">
-                                        <rect key="frame" x="10" y="20" width="128" height="128"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="nAx-B6-bgs">
-                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                        </collectionViewCellContentView>
-                                    </collectionViewCell>
-                                </cells>
+                                <cells/>
                             </collectionView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="wVA-dK-Ws7"/>
